--- a/data/resources/ui/preferences.ui
+++ b/data/resources/ui/preferences.ui
@@ -31,10 +31,11 @@
                 <child>
                     <object class="AdwPreferencesGroup">
                         <property name="title" translatable="yes">Color Formats</property>
-                        <property name="description" translatable="yes">Choose which formats will be visible</property>
+                        <property name="description" translatable="yes">Choose which formats will be visible. </property>
                         <child type="header-suffix">
                             <object class="GtkButton">
                                 <property name="icon-name">entry-clear-symbolic</property>
+                                <property name="tooltip-text" translatable="true" context="Tooltip of the button to reset the format order">Reset Order</property>
                                 <signal name="clicked" handler="on_reset_pressed" swapped="true" />
                                 <style>
                                     <class name="flat" />
