--- a/data/resources/ui/preferences.ui
+++ b/data/resources/ui/preferences.ui
@@ -10,7 +10,7 @@
                 <property name="title" translatable="yes">General</property>
                 <child>
                     <object class="AdwPreferencesGroup">
-                        <property name="title" translatable="yes">Format</property>
+                        <property name="title" translatable="yes">Formatting</property>
                         <child>
                             <object class="AdwComboRow" id="alpha_pos_box">
                                 <property name="title" translatable="yes">Alpha-Value-Position</property>
@@ -31,7 +31,7 @@
                 <child>
                     <object class="AdwPreferencesGroup">
                         <property name="title" translatable="yes">Color Formats</property>
-                        <property name="description" translatable="yes">Choose which formats will be visible. </property>
+                        <property name="description" translatable="yes">Choose which formats will be visible. Rearrange them using drag and drop.</property>
                         <child type="header-suffix">
                             <object class="GtkButton">
                                 <property name="icon-name">entry-clear-symbolic</property>
