added tooltips to .pot file

--- a/data/resources/ui/hex-entry.ui
+++ b/data/resources/ui/hex-entry.ui
@@ -19,7 +19,7 @@
     <child>
       <object class="GtkButton">
         <property name="icon-name">edit-copy-symbolic</property>
-        <property name="tooltip-text" translatable="true" context="Tooltip of the copy button for the hex format">Copy Format</property>
+        <property name="tooltip-text" translatable="yes" context="Tooltip of the copy button for the hex format">Copy Format</property>
         <signal name="clicked" handler="on_copy_pressed" swapped="true" />
       </object>
     </child>
