--- a/data/resources/style.css
+++ b/data/resources/style.css
@@ -1,30 +1,16 @@
-.title-header{
+.title-header {
   font-size: 36px;
   font-weight: bold;
 }
 
-.redScale trough highlight {
-  background-color: red;
-  color: red;
+.no-padding {
+  padding: 0px;
 }
 
-.greenScale trough highlight {
-  background-color: green;
-  color: green;
-}
-
-.blueScale trough highlight {
-  background-color: blue;
-  color: blue;
-}
-
-
-.alphaScale trough highlight {
-  background-color: black;
-  color: black;
+.invisible {
+  background-color: transparent;
 }
 
 button#history-item {
   padding: 0px;
-  /* padding-left: 0; padding-right: 0;  */
 }
