added support for HWB

--- a/data/resources/ui/window.ui
+++ b/data/resources/ui/window.ui
@@ -113,6 +113,11 @@
                         <property name="visible">False</property>
                       </object>
                     </child>
+                    <child>
+                      <object class="ColorModelEntry" id="hwb_entry">
+                        <property name="visible">False</property>
+                      </object>
+                    </child>
                   </object>
                 </child>
                 <child>
