switch color by name

--- a/data/resources/ui/window.ui
+++ b/data/resources/ui/window.ui
@@ -91,6 +91,7 @@
                     <child>
                       <object class="ColorFormatRow" id="name_row">
                         <property name="visible">False</property>
+                        <property name="editable">True</property>
                       </object>
                     </child>
                     <child>
