--- a/data/resources/ui/preferences.ui
+++ b/data/resources/ui/preferences.ui
@@ -41,35 +41,44 @@
                             </object>
                         </child>
                         <child>
-                            <object class="AdwComboRow" id="cie_illuminants_box">
+                            <object class="AdwActionRow">
                                 <property name="title" translatable="yes">CIE illuminants</property>
                                 <property name="subtitle" translatable="yes">Under which conditions are the colors observed</property>
-                                <property name="model">
-                                    <object class="GtkStringList">
-                                        <items>
-                                            <item context="CIE illuminant, more info at https://en.wikipedia.org/wiki/Standard_illuminant" translatable="yes">A (Incandescent/tungsten)</item>
-                                            <item context="CIE illuminant, more info at https://en.wikipedia.org/wiki/Standard_illuminant" translatable="yes">B (Old direct sunlight at noon)</item>
-                                            <item context="CIE illuminant, more info at https://en.wikipedia.org/wiki/Standard_illuminant" translatable="yes">C (Old daylight)</item>
-                                            <item context="CIE illuminant, more info at https://en.wikipedia.org/wiki/Standard_illuminant" translatable="yes">D50 (ICC profile PCS)</item>
-                                            <item context="CIE illuminant, more info at https://en.wikipedia.org/wiki/Standard_illuminant" translatable="yes">D55 (Mid-morning daylight)</item>
-                                            <item context="CIE illuminant, more info at https://en.wikipedia.org/wiki/Standard_illuminant" translatable="yes">D65 (Daylight, sRGB, Adobe-RGB)</item>
-                                            <item context="CIE illuminant, more info at https://en.wikipedia.org/wiki/Standard_illuminant" translatable="yes">D75 (North sky daylight)</item>
-                                            <item context="CIE illuminant, more info at https://en.wikipedia.org/wiki/Standard_illuminant" translatable="yes">E (Equal energy)</item>
-                                            <item context="CIE illuminant, more info at https://en.wikipedia.org/wiki/Standard_illuminant" translatable="yes">F1 (Daylight Fluorescent)</item>
-                                            <item context="CIE illuminant, more info at https://en.wikipedia.org/wiki/Standard_illuminant" translatable="yes">F2 (Cool fluorescent)</item>
-                                            <item context="CIE illuminant, more info at https://en.wikipedia.org/wiki/Standard_illuminant" translatable="yes">F3 (White Fluorescent)</item>
-                                            <item context="CIE illuminant, more info at https://en.wikipedia.org/wiki/Standard_illuminant" translatable="yes">F4 (Warm White Fluorescent)</item>
-                                            <item context="CIE illuminant, more info at https://en.wikipedia.org/wiki/Standard_illuminant" translatable="yes">F5 (Daylight Fluorescent)</item>
-                                            <item context="CIE illuminant, more info at https://en.wikipedia.org/wiki/Standard_illuminant" translatable="yes">F6 (Lite White Fluorescent)</item>
-                                            <item context="CIE illuminant, more info at https://en.wikipedia.org/wiki/Standard_illuminant" translatable="yes">F7 (Daylight fluorescent, D65 simulator)</item>
-                                            <item context="CIE illuminant, more info at https://en.wikipedia.org/wiki/Standard_illuminant" translatable="yes">F8 (Sylvania F40, D50 simulator)</item>
-                                            <item context="CIE illuminant, more info at https://en.wikipedia.org/wiki/Standard_illuminant" translatable="yes">F9 (Cool White Fluorescent)</item>
-                                            <item context="CIE illuminant, more info at https://en.wikipedia.org/wiki/Standard_illuminant" translatable="yes">F10 (Ultralume 50, Philips TL85)</item>
-                                            <item context="CIE illuminant, more info at https://en.wikipedia.org/wiki/Standard_illuminant" translatable="yes">F11 (Ultralume 40, Philips TL84)</item>
-                                            <item context="CIE illuminant, more info at https://en.wikipedia.org/wiki/Standard_illuminant" translatable="yes">F12 (Ultralume 30, Philips TL83)</item>
-                                        </items>
+                                <property name="activatable-widget">cie_illuminants_box</property>
+                                <child type="suffix">
+                                    <object class="GtkDropDown" id="cie_illuminants_box">
+                                        <property name="valign">center</property>
+                                        <property name="model">
+                                            <object class="GtkStringList">
+                                                <items>
+                                                    <item context="CIE illuminant, more info at https://en.wikipedia.org/wiki/Standard_illuminant" translatable="yes">A (Incandescent/tungsten)</item>
+                                                    <item context="CIE illuminant, more info at https://en.wikipedia.org/wiki/Standard_illuminant" translatable="yes">B (Old direct sunlight at noon)</item>
+                                                    <item context="CIE illuminant, more info at https://en.wikipedia.org/wiki/Standard_illuminant" translatable="yes">C (Old daylight)</item>
+                                                    <item context="CIE illuminant, more info at https://en.wikipedia.org/wiki/Standard_illuminant" translatable="yes">D50 (ICC profile PCS)</item>
+                                                    <item context="CIE illuminant, more info at https://en.wikipedia.org/wiki/Standard_illuminant" translatable="yes">D55 (Mid-morning daylight)</item>
+                                                    <item context="CIE illuminant, more info at https://en.wikipedia.org/wiki/Standard_illuminant" translatable="yes">D65 (Daylight, sRGB, Adobe-RGB)</item>
+                                                    <item context="CIE illuminant, more info at https://en.wikipedia.org/wiki/Standard_illuminant" translatable="yes">D75 (North sky daylight)</item>
+                                                    <item context="CIE illuminant, more info at https://en.wikipedia.org/wiki/Standard_illuminant" translatable="yes">E (Equal energy)</item>
+                                                    <item context="CIE illuminant, more info at https://en.wikipedia.org/wiki/Standard_illuminant" translatable="yes">F1 (Daylight Fluorescent)</item>
+                                                    <item context="CIE illuminant, more info at https://en.wikipedia.org/wiki/Standard_illuminant" translatable="yes">F2 (Cool fluorescent)</item>
+                                                    <item context="CIE illuminant, more info at https://en.wikipedia.org/wiki/Standard_illuminant" translatable="yes">F3 (White Fluorescent)</item>
+                                                    <item context="CIE illuminant, more info at https://en.wikipedia.org/wiki/Standard_illuminant" translatable="yes">F4 (Warm White Fluorescent)</item>
+                                                    <item context="CIE illuminant, more info at https://en.wikipedia.org/wiki/Standard_illuminant" translatable="yes">F5 (Daylight Fluorescent)</item>
+                                                    <item context="CIE illuminant, more info at https://en.wikipedia.org/wiki/Standard_illuminant" translatable="yes">F6 (Lite White Fluorescent)</item>
+                                                    <item context="CIE illuminant, more info at https://en.wikipedia.org/wiki/Standard_illuminant" translatable="yes">F7 (Daylight fluorescent, D65 simulator)</item>
+                                                    <item context="CIE illuminant, more info at https://en.wikipedia.org/wiki/Standard_illuminant" translatable="yes">F8 (Sylvania F40, D50 simulator)</item>
+                                                    <item context="CIE illuminant, more info at https://en.wikipedia.org/wiki/Standard_illuminant" translatable="yes">F9 (Cool White Fluorescent)</item>
+                                                    <item context="CIE illuminant, more info at https://en.wikipedia.org/wiki/Standard_illuminant" translatable="yes">F10 (Ultralume 50, Philips TL85)</item>
+                                                    <item context="CIE illuminant, more info at https://en.wikipedia.org/wiki/Standard_illuminant" translatable="yes">F11 (Ultralume 40, Philips TL84)</item>
+                                                    <item context="CIE illuminant, more info at https://en.wikipedia.org/wiki/Standard_illuminant" translatable="yes">F12 (Ultralume 30, Philips TL83)</item>
+                                                </items>
+                                            </object>
+                                        </property>
+                                        <style>
+                                            <class name="flat" />
+                                        </style>
                                     </object>
-                                </property>
+                                </child>
                             </object>
                         </child>
                         <child>
