--- a/data/resources/ui/palette-window.ui
+++ b/data/resources/ui/palette-window.ui
@@ -1,19 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
-    <template class="PaletteDialog" parent="GtkDialog">
+    <template class="PaletteDialog" parent="AdwWindow">
         <property name="modal">True</property>
         <property name="title" translatable="yes">Palettes</property>
-        <property name="child">
-            <object class="GtkListBox" id="palettes_list">
-                <property name="selection-mode">none</property>
-                <property name="margin-top">12</property>
-                <property name="margin-bottom">12</property>
-                <property name="margin-start">12</property>
-                <property name="margin-end">12</property>
-                <style>
-                    <class name="boxed-list" />
-                </style>
+        <child>
+            <object class="GtkBox">
+                <property name="orientation">vertical</property>
+                <child>
+                    <object class="AdwHeaderBar" id="headerbar">
+                        <property name="title-widget">
+                            <object class="AdwWindowTitle" id="window_title" />
+                        </property>
+                    </object>
+                </child>
+                <child>
+                    <object class="GtkListBox" id="palettes_list">
+                        <property name="selection-mode">none</property>
+                        <property name="margin-top">12</property>
+                        <property name="margin-bottom">12</property>
+                        <property name="margin-start">12</property>
+                        <property name="margin-end">12</property>
+                        <style>
+                            <class name="boxed-list" />
+                        </style>
+                    </object>
+                </child>
             </object>
-        </property>
+        </child>
+        <child>
+            <object class='GtkShortcutController'>
+                <property name='scope'>global</property>
+                <child>
+                    <object class='GtkShortcut'>
+                        <property name='trigger'>Escape</property>
+                        <property name='action'>action(window.close)</property>
+                    </object>
+                </child>
+            </object>
+        </child>
     </template>
 </interface>
