added export palettes and clean up
palettes can be exported from the palette dialog as .gpl files

--- a/data/resources/ui/palette-window.ui
+++ b/data/resources/ui/palette-window.ui
@@ -11,6 +11,13 @@
                         <property name="title-widget">
                             <object class="AdwWindowTitle" id="window_title" />
                         </property>
+                        <child>
+                            <object class="GtkButton">
+                                <property name="tooltip-text" translatable="yes">Save Palettes</property>
+                                <property name="icon-name">document-save-as-symbolic</property>
+                                <signal name="clicked" handler="on_save_clicked" swapped="true" />
+                            </object>
+                        </child>
                     </object>
                 </child>
                 <child>
